export/TestAccActiveDirectoryDomainService_updateWithDatasource_step_3.tf



provider "azurerm" {
  features {}
}

provider "azuread" {}

resource "azurerm_resource_group" "test" {
  name     = "acclongtestRG-aadds-210825040807491975"
  location = "West Europe"
}

resource "azurerm_virtual_network" "test" {
  name                = "acctestVnet-aadds-210825040807491975"
  location            = azurerm_resource_group.test.location
  resource_group_name = azurerm_resource_group.test.name
  address_space       = ["10.10.0.0/16"]
}

resource "azurerm_subnet" "aadds" {
  name                 = "acctestSubnet-aadds-210825040807491975"
  resource_group_name  = azurerm_resource_group.test.name
  virtual_network_name = azurerm_virtual_network.test.name
  address_prefixes     = [cidrsubnet(azurerm_virtual_network.test.address_space.0, 8, 0)]
}

resource "azurerm_subnet" "workload" {
  name                 = "acctestSubnet-workload-210825040807491975"
  resource_group_name  = azurerm_resource_group.test.name
  virtual_network_name = azurerm_virtual_network.test.name
  address_prefixes     = [cidrsubnet(azurerm_virtual_network.test.address_space.0, 8, 1)]
}

resource "azurerm_network_security_group" "aadds" {
  name                = "acctestNSG-aadds-210825040807491975"
  location            = azurerm_resource_group.test.location
  resource_group_name = azurerm_resource_group.test.name

  security_rule {
    name                       = "AllowSyncWithAzureAD"
    priority                   = 101
    direction                  = "Inbound"
    access                     = "Allow"
    protocol                   = "Tcp"
    source_port_range          = "*"
    destination_port_range     = "443"
    source_address_prefix      = "AzureActiveDirectoryDomainServices"
    destination_address_prefix = "*"
  }

  security_rule {
    name                       = "AllowRD"
    priority                   = 201
    direction                  = "Inbound"
    access                     = "Allow"
    protocol                   = "Tcp"
    source_port_range          = "*"
    destination_port_range     = "3389"
    source_address_prefix      = "CorpNetSaw"
    destination_address_prefix = "*"
  }

  security_rule {
    name                       = "AllowPSRemoting"
    priority                   = 301
    direction                  = "Inbound"
    access                     = "Allow"
    protocol                   = "Tcp"
    source_port_range          = "*"
    destination_port_range     = "5986"
    source_address_prefix      = "AzureActiveDirectoryDomainServices"
    destination_address_prefix = "*"
  }

  security_rule {
    name                       = "AllowLDAPS"
    priority                   = 401
    direction                  = "Inbound"
    access                     = "Allow"
    protocol                   = "Tcp"
    source_port_range          = "*"
    destination_port_range     = "636"
    source_address_prefix      = "*"
    destination_address_prefix = "*"
  }
}

resource azurerm_subnet_network_security_group_association "test" {
  subnet_id                 = azurerm_subnet.aadds.id
  network_security_group_id = azurerm_network_security_group.aadds.id
}

data "azuread_domains" "test" {
  only_initial = true
}

resource "azuread_service_principal" "test" {
  application_id = "2565bd9d-da50-47d4-8b85-4c97f669dc36" // published app for domain services
}

resource "azuread_group" "test" {
  name        = "AAD DC Administrators"
  description = "Delegated group to administer Azure AD Domain Services"
}

resource "azuread_user" "test" {
  user_principal_name = "acctestAADDSAdminUser-210825040807491975@${data.azuread_domains.test.domains.0.domain_name}"
  display_name        = "acctestAADDSAdminUser-210825040807491975"
  password            = "p@$$Wd4owffd"
}

resource "azuread_group_member" "test" {
  group_object_id  = azuread_group.test.object_id
  member_object_id = azuread_user.test.object_id
}

resource "azurerm_active_directory_domain_service" "test" {
  name                = "acctest-k82kv"
  location            = azurerm_resource_group.test.location
  resource_group_name = azurerm_resource_group.test.name

  domain_name           = "never.gonna.shut.you.down"
  sku                   = "Enterprise"
  filtered_sync_enabled = false

  initial_replica_set {
    subnet_id = azurerm_subnet.aadds.id
  }

  notifications {
    additional_recipients = ["notifyA@example.net", "notifyB@example.org"]
    notify_dc_admins      = true
    notify_global_admins  = true
  }

  secure_ldap {
    enabled                  = true
    external_access_enabled  = true
    pfx_certificate          = "MIIKQQIBAzCCCgcGCSqGSIb3DQEHAaCCCfgEggn0MIIJ8DCCBKcGCSqGSIb3DQEHBqCCBJgwggSUAgEAMIIEjQYJKoZIhvcNAQcBMBwGCiqGSIb3DQEMAQMwDgQIiyYq8fFjdcECAggAgIIEYO5ElAQbptx+P3lRgFDYkyBNdA0MSMJdijukGp6Jvms43SICKly63yJwTAuekO5kvnz5kYOxZugsal8763m7qdQONGipROOKjiZBkyv6o5ZO5Kw5uHOiY9WZacq5OsKxgTKnSiPgrxYllrovrAukLtyF/md+qNz4BSsHN84i10FneVPED1lqNG8CE1I/7ZCixXozxAuh8HgX/JJ5C3wFBlyCYgxpVprVRiPVD+Hc/VJgkABOjdrkUNm2EbGFH5cgx8f3ZexkH/afaU8pGZdwW4sEzwXlunRLAbdNjrjUw5PWmTka/o5mAwR+IOLfAgTDU0zJ [...]
    pfx_certificate_password = "qwer5678"
  }

  security {
    ntlm_v1_enabled         = true
    sync_kerberos_passwords = true
    sync_ntlm_passwords     = true
    sync_on_prem_passwords  = true
    tls_v1_enabled          = true
  }

  tags = {
    Environment = "test"
  }

  depends_on = [
    azuread_group.test,
    azuread_group_member.test,
    azuread_service_principal.test,
    azuread_user.test,
    azurerm_subnet_network_security_group_association.test,
  ]
}

resource "azurerm_virtual_network_dns_servers" "test" {
  virtual_network_id = azurerm_virtual_network.test.id
  dns_servers        = azurerm_active_directory_domain_service.test.initial_replica_set.0.domain_controller_ip_addresses
}


resource "azurerm_resource_group" "test_secondary" {
  name     = "acclongtestRG-aadds-secondary-210825040807491975"
  location = "West US 2"
}

resource "azurerm_virtual_network" "test_secondary" {
  name                = "acctestVnet-aadds-secondary-210825040807491975"
  location            = azurerm_resource_group.test_secondary.location
  resource_group_name = azurerm_resource_group.test_secondary.name
  address_space       = ["10.20.0.0/16"]
}

resource "azurerm_subnet" "aadds_secondary" {
  name                 = "acctestSubnet-aadds-secondary-210825040807491975"
  resource_group_name  = azurerm_resource_group.test_secondary.name
  virtual_network_name = azurerm_virtual_network.test_secondary.name
  address_prefixes     = [cidrsubnet(azurerm_virtual_network.test_secondary.address_space.0, 8, 0)]
}

resource "azurerm_subnet" "workload_secondary" {
  name                 = "acctestSubnet-workload-secondary-210825040807491975"
  resource_group_name  = azurerm_resource_group.test_secondary.name
  virtual_network_name = azurerm_virtual_network.test_secondary.name
  address_prefixes     = [cidrsubnet(azurerm_virtual_network.test_secondary.address_space.0, 8, 1)]
}

resource "azurerm_network_security_group" "aadds_secondary" {
  name                = "acctestNSG-aadds-secondary-210825040807491975"
  location            = azurerm_resource_group.test_secondary.location
  resource_group_name = azurerm_resource_group.test_secondary.name

  security_rule {
    name                       = "AllowSyncWithAzureAD"
    priority                   = 101
    direction                  = "Inbound"
    access                     = "Allow"
    protocol                   = "Tcp"
    source_port_range          = "*"
    destination_port_range     = "443"
    source_address_prefix      = "AzureActiveDirectoryDomainServices"
    destination_address_prefix = "*"
  }

  security_rule {
    name                       = "AllowRD"
    priority                   = 201
    direction                  = "Inbound"
    access                     = "Allow"
    protocol                   = "Tcp"
    source_port_range          = "*"
    destination_port_range     = "3389"
    source_address_prefix      = "CorpNetSaw"
    destination_address_prefix = "*"
  }

  security_rule {
    name                       = "AllowPSRemoting"
    priority                   = 301
    direction                  = "Inbound"
    access                     = "Allow"
    protocol                   = "Tcp"
    source_port_range          = "*"
    destination_port_range     = "5986"
    source_address_prefix      = "AzureActiveDirectoryDomainServices"
    destination_address_prefix = "*"
  }

  security_rule {
    name                       = "AllowLDAPS"
    priority                   = 401
    direction                  = "Inbound"
    access                     = "Allow"
    protocol                   = "Tcp"
    source_port_range          = "*"
    destination_port_range     = "636"
    source_address_prefix      = "*"
    destination_address_prefix = "*"
  }
}

resource azurerm_subnet_network_security_group_association "test_secondary" {
  subnet_id                 = azurerm_subnet.aadds_secondary.id
  network_security_group_id = azurerm_network_security_group.aadds_secondary.id
}

resource "azurerm_virtual_network_peering" "test_primary_secondary" {
  name                      = "acctestVnet-aadds-primary-secondary-210825040807491975"
  resource_group_name       = azurerm_virtual_network.test.resource_group_name
  virtual_network_name      = azurerm_virtual_network.test.name
  remote_virtual_network_id = azurerm_virtual_network.test_secondary.id

  allow_forwarded_traffic      = true
  allow_gateway_transit        = false
  allow_virtual_network_access = true
  use_remote_gateways          = false
}

resource "azurerm_virtual_network_peering" "test_secondary_primary" {
  name                      = "acctestVnet-aadds-secondary-primary-210825040807491975"
  resource_group_name       = azurerm_virtual_network.test_secondary.resource_group_name
  virtual_network_name      = azurerm_virtual_network.test_secondary.name
  remote_virtual_network_id = azurerm_virtual_network.test.id

  allow_forwarded_traffic      = true
  allow_gateway_transit        = false
  allow_virtual_network_access = true
  use_remote_gateways          = false
}

resource "azurerm_active_directory_domain_service_replica_set" "test_secondary" {
  domain_service_id = azurerm_active_directory_domain_service.test.id
  location          = azurerm_resource_group.test_secondary.location
  subnet_id         = azurerm_subnet.aadds_secondary.id

  depends_on = [
    azurerm_subnet_network_security_group_association.test_secondary,
    azurerm_virtual_network_peering.test_primary_secondary,
    azurerm_virtual_network_peering.test_secondary_primary,
  ]
}

resource "azurerm_virtual_network_dns_servers" "test_secondary" {
  virtual_network_id = azurerm_virtual_network.test_secondary.id
  dns_servers        = azurerm_active_directory_domain_service_replica_set.test_secondary.domain_controller_ip_addresses
}


data "azurerm_active_directory_domain_service" "test" {
  name                = azurerm_active_directory_domain_service.test.name
  resource_group_name = azurerm_active_directory_domain_service.test.resource_group_name
}
